--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "express-handlebars": "^3.1.0",
     "graphql": "^14.4.2",
     "moment": "^2.24.0",
+    "pg-promise": "^9.0.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
