--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "express-graphql": "^0.9.0",
     "express-handlebars": "^3.1.0",
     "graphql": "^14.4.2",
+    "lowdb": "^1.0.0",
     "moment": "^2.24.0",
-    "pg-promise": "^9.0.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
