--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-graphql": "^0.9.0",
     "express-handlebars": "^3.1.0",
     "graphql": "^14.4.2",
+    "jsonwebtoken": "^8.5.1",
     "lowdb": "^1.0.0",
     "moment": "^2.24.0",
     "node-sass-middleware": "^0.11.0",
