--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-graphql": "^0.11.0",
     "express-handlebars": "^5.2.0",
     "graphql": "^15.4.0",
+    "graphql-playground-middleware-express": "^1.7.22",
     "jsonwebtoken": "^8.5.1",
     "lowdb": "^1.0.0",
     "moment": "^2.29.1",
